--- a/app/globals.css
+++ b/app/globals.css
@@ -214,6 +214,7 @@
 
   .header-box-title {
     @apply text-24 lg:text-30 font-semibold text-gray-900;
+    font-family: var(--font-rubik);
   }
 
   .header-box-subtext {
@@ -365,11 +366,11 @@
 
   /* Sidebar */
   .sidebar {
-    @apply sticky left-0 top-0 flex h-screen w-fit flex-col  justify-between border-r border-gray-200 bg-white pt-8 text-white max-md:hidden sm:p-4 xl:p-6 2xl:w-[355px];
+    @apply sticky left-0 top-0 flex h-screen w-fit flex-col  justify-between border-l border-gray-200 bg-white pt-8 text-white max-md:hidden sm:p-4 xl:p-6 2xl:w-[355px];
   }
 
   .sidebar-logo {
-    @apply 2xl:text-26 font-ibm-plex-serif text-[26px] font-bold text-black-1 max-xl:hidden;
+    @apply 2xl:text-26 font-rubik text-[26px] font-bold text-black-1 max-xl:hidden;
   }
 
   .sidebar-link {
@@ -378,5 +379,19 @@
 
   .sidebar-label {
     @apply text-16 font-semibold text-black-2 max-xl:hidden;
+  }
+
+  .fanum {
+    -moz-font-feature-settings: 'ss02';
+    -webkit-font-feature-settings: 'ss02';
+    -o-font-feature-settings: 'ss02';
+    font-feature-settings: 'ss02';
+  }
+
+  .monospace {
+    -moz-font-feature-settings: 'ss03';
+    -webkit-font-feature-settings: 'ss03';
+    -o-font-feature-settings: 'ss03';
+    font-feature-settings: 'ss03';
   }
 }
